modal in front and icons in login page

--- a/bootstrap-demo-master/new.html
+++ b/bootstrap-demo-master/new.html
@@ -8,9 +8,16 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <script src="https://kit.fontawesome.com/yourcode.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <link rel = "stylesheet" type = "text/css" href = "new.css" />
   
+<script>
+    $(document).ready(function(){
+        $("#myModal").modal('show');
+    });
+</script>
+
   </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50" class="m-0 p-0">
 
@@ -91,27 +98,28 @@
       <div class="modal-content">
         <div class="modal-header" style="padding:35px 50px;">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4><i class='fas fa-unlock'></i> Login</h4>
+          <h4><i style='font-size:36px' class='fas mr-2'>&#xf09c;</i> Login</h4>
         </div>
         <div class="modal-body" style="padding:40px 50px;">
           <form role="form">
             <div class="form-group">
-              <label for="usrname"> Username</label>
+              <label for="usrname"><i class='fas fa-user  mr-2' style='font-size:16px'></i>
+ Username</label>
               <input type="text" class="form-control" id="usrname" placeholder="Enter email">
             </div>
             <div class="form-group">
-              <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Password</label>
+              <label for="psw"><i class='fas fa-eye  mr-2' style='font-size:16px'></i> Password</label>
               <input type="text" class="form-control" id="psw" placeholder="Enter password">
             </div>
             <div class="checkbox">
               <label><input type="checkbox" value="" checked>Remember me</label>
             </div>
-              <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span> Login
+              <button type="submit" class="btn btn-success btn-block"><i class='fas fa-power-off  mr-2' style='font-size:16px'></i> Login
               </button>
           </form>
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+          <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><i class="fas fa-close mr-2" style="font-size:16px"></i> Cancel</button>
           <p>Not a member? <a data-dismiss="modal" data-toggle="modal" href="#id01" >Sign Up</a></p><br>
           <p>Forgot <a href="#">Password?</a></p>
         </div>
@@ -250,7 +258,7 @@
 	<a href="#" style="color:white;">About us</a><br><br>
 	<a href="#" style="color:white;">Contact us</a><br><br>
 	<a href="#" style="color:white;">Directions</a><br><br>
-	<a href="#" style="color:white;">Blog</a><br><br>
+	<a href="#" style="color:white;">Blog</a><br><br> 
 	</div>
 
 
